# django-helpdesk

./: .#setup.py  ..pre-commit-config.yaml.~undo-tree~  .coveragerc  .gitignore  .pyproject.toml.~undo-tree~  .requirements-no-pinax.txt.~undo-tree~  .requirements.txt.~undo-tree~  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  LICENSE.3RDPARTY  Makefile  README.rst  pyproject.toml  requirements.txt
.tx/: config
demo/: setup.py
demo/demodesk/config/: settings.py  urls.py
demo_helpdesk/: db.sqlite3  manage.py
demo_helpdesk/demo_helpdesk/: asgi.py  settings.py  urls.py  wsgi.py
docs/: conf.py  configuration.rst  index.rst  install.rst  spam.rst  upgrade.rst
helpdesk/: admin.py  decorators.py  email.py  forms.py  lib.py  models.py  settings.py  urls.py
helpdesk/.mypy_cache/3.7/: __future__.data.json  __future__.meta.json  _dummy_thread.meta.json  _importlib_modulespec.meta.json  _markupbase.data.json  _markupbase.meta.json  _thread.data.json  _thread.meta.json  abc.meta.json  array.meta.json  base64.meta.json  builtins.meta.json  codecs.meta.json  configparser.meta.json  enum.meta.json  functools.meta.json  io.meta.json  itertools.meta.json  mimetypes.meta.json  mmap.meta.json  pickle.meta.json  posix.meta.json  queue.data.json  queue.meta.json  re.meta.json  reprlib.meta.json  shlex.meta.json  smtplib.data.json  smtplib.meta.json  socket.meta.json  socketserver.meta.json  ssl.meta.json  string.meta.json  sys.meta.json  threading.meta.json  time.meta.json  types.meta.json  typing.meta.json
helpdesk/.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
helpdesk/.mypy_cache/3.7/email/: __init__.meta.json  charset.meta.json  contentmanager.meta.json  errors.meta.json  header.meta.json  message.meta.json  policy.meta.json
helpdesk/.mypy_cache/3.7/helpdesk/: __init__.meta.json
helpdesk/.mypy_cache/3.7/html/: __init__.meta.json  entities.meta.json  parser.data.json  parser.meta.json
helpdesk/.mypy_cache/3.7/http/: __init__.meta.json  client.data.json  client.meta.json  cookiejar.data.json  cookiejar.meta.json  cookies.data.json  cookies.meta.json  server.meta.json
helpdesk/.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json  machinery.meta.json  util.meta.json
helpdesk/.mypy_cache/3.7/logging/: __init__.meta.json
helpdesk/.mypy_cache/3.7/os/: __init__.meta.json  path.meta.json
helpdesk/.mypy_cache/3.7/six/: __init__.meta.json
helpdesk/.mypy_cache/3.7/tkinter/: __init__.meta.json  commondialog.meta.json  constants.meta.json  dialog.data.json  dialog.meta.json  filedialog.meta.json  ttk.meta.json
helpdesk/.mypy_cache/3.7/unittest/: __init__.meta.json
helpdesk/.mypy_cache/3.7/urllib/: __init__.meta.json  error.data.json  error.meta.json  parse.data.json  parse.meta.json  request.meta.json  response.meta.json  robotparser.meta.json
helpdesk/fixtures/: emailtemplate.json
helpdesk/locale/ca/LC_MESSAGES/: django.po
helpdesk/locale/el/LC_MESSAGES/: django.po
helpdesk/locale/es_MX/LC_MESSAGES/: django.po
helpdesk/locale/fa_IR/LC_MESSAGES/: django.po
helpdesk/locale/hr/LC_MESSAGES/: django.po
helpdesk/locale/th/LC_MESSAGES/: django.po
helpdesk/management/commands/: create_queue_permissions.py  get_email.py
helpdesk/migrations/: 0001_initial.py  0004_add_per_queue_staff_membership.py  0008_extra_for_permissions.py  0010_remove_queuemembership.py  0013_email_box_local_dir_and_logging.py  0015_expand_permission_name_size.py  0016_alter_model_options.py  0017_default_owner_on_delete_null.py  0019_ticket_secret_key.py  0020_depickle_user_settings.py  0022_add_submitter_email_id_field_to_ticket.py  0023_add_enable_notifications_on_email_events_to_ticket.py  0024_time_spent.py  0025_queue_dedicated_time.py  0026_kbitem_attachments.py  0028_kbitem_team.py  0032_kbitem_enabled.py  0035_alter_email_on_ticket_change.py  0036_add_attachment_validator.py
helpdesk/static/helpdesk/: helpdesk.css
helpdesk/static/helpdesk/js/: init_due_date.js
helpdesk/templates/: 500.html
helpdesk/templates/helpdesk/: attribution.html  base-head.html  base_js.html  confirm_delete_saved_query.html  create_ticket.html  debug.html  delete_ticket.html  followup_edit.html  help_context.html  navigation-header.html  navigation-sidebar.html  public_base.html  public_spam.html  public_view_form.html  public_view_ticket.html  report_output.html  rss_list.html  success_iframe.html  ticket.html  ticket_attachment_del.html  ticket_cc_del.html  ticket_dependency_del.html  ticket_list_new.haml  ticket_merge.html  user_settings.html
helpdesk/templates/helpdesk/cs/: email_text_footer.txt
helpdesk/templates/helpdesk/es/: email_html_base.html  email_text_footer.txt
helpdesk/templates/helpdesk/filters/: date.html  kbitems.html  keywords.html  owner.html  queue.html  sorting.html  status.html
helpdesk/templates/helpdesk/include/: stats.html  tickets.html  unassigned.html
helpdesk/templates/helpdesk/pl/: email_html_base.html  email_text_footer.txt
helpdesk/templates/helpdesk/registration/: change_password_done.html  login.html
helpdesk/templatetags/: helpdesk_staff.py  helpdesk_util.py  ticket_to_link.py  user_admin_url.py
helpdesk/tests/: helpers.py  test_get_email.py  test_per_queue_staff_permission.py  urls.py
helpdesk/tests/.mypy_cache/3.7/: __future__.meta.json  _dummy_thread.meta.json  _importlib_modulespec.meta.json  _markupbase.meta.json  _thread.meta.json  abc.meta.json  array.meta.json  base64.data.json  base64.meta.json  builtins.meta.json  codecs.meta.json  configparser.meta.json  enum.meta.json  functools.meta.json  io.meta.json  itertools.data.json  itertools.meta.json  mimetypes.meta.json  mmap.meta.json  mock.data.json  mock.meta.json  pickle.meta.json  posix.meta.json  queue.meta.json  re.meta.json  reprlib.meta.json  shlex.meta.json  shutil.data.json  shutil.meta.json  smtplib.meta.json  socket.data.json  socket.meta.json  socketserver.meta.json  ssl.meta.json  string.data.json  string.meta.json  sys.meta.json  (+6 more)
helpdesk/tests/test_files/: all-special-chars.eml  utf-nondecodable.eml
helpdesk/views/: filters.py  public.py  staff.py
(+457 files in other folders)
